--- a/parts/client/nav.jade
+++ b/parts/client/nav.jade
@@ -217,16 +217,16 @@ template(name='rightbar')
         a.item.toggle_rightbar(href="/u/#{currentUser.username}/offers" class="{{isActiveRoute 'user_offers'}}")
             | offers
             i.large.hand.holding.heart.icon
-        // a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
-        //     | chat
-        //     i.chat.icon
+        a.item.toggle_rightbar(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}")
+            | chat
+            i.chat.icon
         .ui.divider
         a.item.toggle_rightbar(href="/u/#{currentUser.username}/edit" title='edit your account')
             i.cog.large.icon
             |settings
-        // a.item.toggle_nightmode.toggle_rightbar(href="#")
-        //     i.lightbulb.large.icon
-        //     |dark mode
+        a.item.toggle_nightmode.toggle_rightbar(href="#")
+            i.lightbulb.large.icon
+            |dark mode
         a.item.logout(href="/u/#{currentUser.username}/messages" class="{{isActiveRoute 'user_messages'}}" )
             |logout
             if is_logging_out
@@ -269,7 +269,18 @@ template(name='leftbar')
         a.item.zoomer.toggle_leftbar(href='/m/model' class="{{isActivePath '/m/model'}}")
             i.large.database.grey.icon
             |database
-        
+        a.item.toggle_sidebar.zoom(href="/m/meal" class="{{isActivePath '/m/meal'}}")
+            i.large.food.icon
+            |food
+        a.item.toggle_sidebar.zoom.set_bug(href="/m/bug" class="{{isActivePath '/m/bug'}}")
+            i.large.bug.icon
+            |bugs
+        a.icon.item.toggle_sidebar.zoom.set_photo(href="/m/photo" class="{{isActivePath '/m/photo'}}" title='photos')
+            i.large.large.picture.icon
+            |photos  
+        a.zoom.icon.item.toggle_sidebar.zoom.set_expense(href="/m/expense" class="{{isActivePath '/m/expense'}}" title='expenses')
+            i.large.dollar.icon
+            |expenses            
         .divider
         a.disabled.item.toggle_leftbar(href="/chat" class="{{isActivePath '/chat'}}" title='chat') 
             | chat
