--- a/parts/client/s.css
+++ b/parts/client/s.css
@@ -511,7 +511,7 @@ a.title, #title {
 
 .label {
   margin:3px !important;
-  border-radius: 7px !important; 
+  /*border-radius: 7px !important; */
 }
 
 input {
